fix to issue 83 - Header and hero too large on responsive version #83

--- a/assets/sass/modules/_latest-post.sass
+++ b/assets/sass/modules/_latest-post.sass
@@ -54,3 +54,14 @@
     border: 3px solid transparent
     color: #666666
     background-color: #cfbc3c
+
+
+@media (max-width: 425px)
+  .latest-post, .episode-header
+    padding: 0
+
+  .latest-post-title
+    font-size: 38px
+
+  .latest-post-content
+    font-size: 1.2em
